less/plugin-ecommerce.less
/* ... */
.product-images,
.product-content {
    width: 50%;
    -webkit-box-ordinal-group: 1;
    -moz-box-ordinal-group: 1;
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
}
@media only screen and (max-width: 850px) {
    .product-images {
        width: 40%;
    }
    .product-content {
        width: 60%;
    }
}

@media only screen and (max-width: 700px) {
    .product-images,
    .product-content {
        width: 100%;
    }
}

// Product images

.product-images {
    float: left;
    margin:0;
    padding: 30px;
    background-color: @color__ecomproduct-images--background;
    @media @mobile {
        padding: 10px;
        margin-bottom: 20px;
        background-color: darken(@color-swatch7, 3%);
    }
    .image-link {
        height: auto;
        background-color: transparent;
        background-image: none !important;
    }
    .image {
        display: block;
        vertical-align: top;
        max-height: 600px;
        margin: 0 auto;
        @media only screen and (max-width: 700px) {
            max-height: 250px;
        }
        @media @mobile {
            max-height: 150px;
        }
    }
}

.product-gallery {
    margin: 20px 0 0;
    text-align: center;
    @media @mobile {
        margin: 10px 0 0;
    }
}

.product-gallery .gallery-item {
    margin-bottom: 3px;
}

// Product Content

.product-content {
    background-color: @color__ecomproduct-content--background;
    padding: 30px;
    @media only screen and (min-width: 900px) {
        display: inline-block;
    }
    @media @mobile {
        padding: 0;
        background-color: transparent;
    }
}

.ecomproduct {
    .product-title {
        color: @color__ecomproduct-title--text;
    }
    .product-price {
        color: @color__ecomproduct-price--text;
    }
}

// Product Options

.product-actions {
    display: inline-block;
    margin: 40px 0 20px;
    width: 100%;
    @media @mobile {
        margin: 20px 0 0;
    }
}
.product-actions .form {
    background-color: @color-swatch7;
    &:first-child {
        @media @mobile {
            margin-bottom: 20px;
            background-color: darken(@color-swatch7, 3%);
            .fieldset {
                display: inline-block;
                width: 100%;
            }
        }
    }
    legend {
        padding: 0;
        color: @color-swatch4;
        background-color: transparent;
        margin-bottom: 10px;
        @media @mobile {
            padding: 20px 20px 10px;
            margin: 0;
        }
    }
    .form-body {
        padding: 0;
        @media @mobile {
            padding: 0 20px;
        }
    }
    .form-group {
        margin: 20px 0;
        @media @mobile {
            margin: 0 0 30px;
        }
    }
    select {
        width: 100%;
    }
    .button {
        float: left;
        width: 48%;
        padding: 8px;
        @media @mobile {
            width: 100%;
            margin-bottom: 20px;
            margin-top: 20px;
        }
    }
    @media @mobile {
        background-color: transparent;
    }
}


// Categories and Tags

.product-attributes {
    display: inline-block;
    width: 100%;
    .product-category {
        margin-bottom: 10px;
    }
}

// View Basquet Button

.view-basket-wrap .button {
    float: right;
    width: 48%;
    padding: 8px;
    text-align: center;
    background-color: @color__button--background--hover;
    &:hover {
        background-color: @color__button--background;
    }
    @media @mobile {
        width: 100%;
        margin-bottom: 20px;
    }
}




// -----------------------------
// Basket Widget
// -----------------------------

.basket-item {
    position: relative;
    padding-bottom: 20px;
    border-bottom: 1px solid darken(@color__body--background, 8%);
}

// Display basket image and content inline

.basket-item-image,
.basket-item-details {
    display: inline-block;
    vertical-align: top;
    margin-right: 20px;
    @media @tablet {
        width: 100%;
        margin-right: 0;
    }
}

// Item Remove Button

.item-remove {
    width: auto;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 9999;
    // Remove icon spacing
    &:before {
        margin-right: 0;
    }
}
// Hide button text

.remove-text {
    display: none;
}

// Basket Image

.basket .image {
    max-height: 200px;
    max-width: 200px;
    @media @mobile {
        max-height: inherit;
    }
}

// Quantity Field

.quantity-field {
    background: transparent;
    padding: 0 10px;
}

.quantity-wrap {
    .button--quantity {
        width: 22px;
        height: 22px;
        margin: 0;
        line-height: 0;
    }
    // button rounded corners
    .quantity-minus {
        -webkit-border-radius: 3px 0 0 3px;
        -moz-border-radius: 3px 0 0 3px;
        border-radius: 3px 0 0 3px;
    }
    .quantity-plus {
        -webkit-border-radius: 0 3px 3px 0;
        -moz-border-radius: 0 3px 3px 0;
        border-radius: 0 3px 3px 0;
    }
    // increase button size for mobile
    @media @mobile {
        max-width: 50%;
        .quantity-field {
            height: 40px;
            padding: 9px;

        }
        .button--quantity {
            margin: 0;
            width: 25%;
            height: 40px;
        }
    }
}

// Basket Total

.basket-total {
    padding-bottom: 20px;
    border-bottom: 1px solid darken(@color__body--background, 8%);
}

// View Basket Button

.view-basket {
    margin: 20px 0;
}




// -----------------------------
// Basket Summary
// -----------------------------


.order-total,
.summary-item-total {
    padding: 16px 0;
    text-align: right;
    @media @mobile {
        text-align: left;
    }
}
/* ... */

